<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="quote" translatable="true">Learn and Grow with Us</string>
    <string name="udacity">Udacity</string>
    <string name="address1">2465 Latham St \n Mountain View, CA 94043</string>
    <string name="phone">650-555-5555</string>
    <string name="website">www.udacity.com</string>
</resources>